--- a/spring-cloud-code/ConfigCenter/src/main/resources/application.properties
+++ b/spring-cloud-code/ConfigCenter/src/main/resources/application.properties
@@ -2,12 +2,23 @@ spring.application.name=config-server
 server.port=8888
 
 #配置git仓库地址
-spring.cloud.config.server.git.uri=https://github.com/forezp/SpringcloudConfig/
-#配置仓库路径
-spring.cloud.config.server.git.searchPaths=respo
+#gitlab需要.git结尾
+spring.cloud.config.server.git.uri=http://huhl@gitlab.hzbd.com/Finance/Config-Repository.git
+#spring.cloud.config.server.git.uri=https://github.com/hanlin5566/SpringCloud-Netflix
+#spring.cloud.config.server.git.uri=https://github.com/spring-cloud-samples/config-repo
+#配置仓库路径,支持通配符
+#spring.cloud.config.server.git.searchPaths=/spring-cloud-code/Config-Repository/client*
+#gitlab 
+spring.cloud.config.server.git.searchPaths=var*
+#springcloud github
+#spring.cloud.config.server.git.searchPaths=foo,bar*
 #配置仓库的分支
 spring.cloud.config.label=master
 #访问git仓库的用户名
-spring.cloud.config.server.git.username=your username
+spring.cloud.config.server.git.username=huhanlin@huizhongcf.com
 #访问git仓库的密码
-spring.cloud.config.server.git.password=your password
+spring.cloud.config.server.git.password=hanlin5566
+
+
+#Eureka server的配置
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
