--- a/spring-cloud-code/ConfigClient/pom.xml
+++ b/spring-cloud-code/ConfigClient/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.hanson</groupId>
-	<artifactId>ConfigCenter</artifactId>
+	<artifactId>server-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>ConfigCenter</name>
+	<name>server-client</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -26,15 +26,22 @@
 	</properties>
 
 	<dependencies>
+	
 		<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
-		
+        
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
