--- a/spring-cloud-code/ConfigCenter/pom.xml
+++ b/spring-cloud-code/ConfigCenter/pom.xml
@@ -10,14 +10,14 @@
 
 	<name>ConfigCenter</name>
 	<description>Demo project for Spring Boot</description>
-
+	<!-- 修改parent支持eureka client -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.10.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
+	<!-- 修改spring-cloud.version  为Edgware.SR2-->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
