--- a/spring-cloud-code/ConfigClient/src/main/resources/application.properties
+++ b/spring-cloud-code/ConfigClient/src/main/resources/application.properties
@@ -20,3 +20,12 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 #直接从配置中心读取配置
 ##confServer的地址
 #spring.cloud.config.uri= http://localhost:8888/
+
+#rabbitMQ配置
+spring.rabbitmq.host=192.168.1.106
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#忽略权限拦截
+management.security.enabled=false
